2001-10-28  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* mincresample.c:
	* mincresample.h: Removed.  Was a 1996 version of the files from
	MINC.

	* Makefile.am: Removed all traces of mincresample.  Add 
	AUTOMAKE_OPTIONS, ACLOCAL_AMFLAGS and EXTRA_DIST so that
	"make distcheck" works.

	* tagtominc.c (main): Bugfix.  Pass tag_id as the structure
	ID list, not the patient ID list.

	* README: New.  Describes the usage of some of these
	utilities.

	* TODO:
	* NEWS: New.

	* configure.ac: Use AC_PROG_LIBTOOL instead of AM_.

	* autogen.sh: Add explanatory text if directory m4 is not present.

2001-10-22  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* *.c: Replace <internal_volume_io.h> by
	<volume_io/internal_volume_io.h>.  Replace <images.h> and
	<numerical.h> by <bicpl/...>.

	* configure.in: Do not check for header <numerical.h>, nor for
	<internal_volume_io.h>.  Do not probe for C++ compiler.

2001-09-24  Jason Lerch   <jason@bic.mni.mcgill.ca>

	* minc_to_rgb.c: Changed UNSIGNED_LONG to UNSIGNED_INT

2001-09-06  Jason Lerch   <jason@bic.mni.mcgill.ca>

	* surface_mask2: Changed the logic so that an explicity binary
	volume is created which is used to mask the original volume. Also
	forced the inclusion of the object boundaries in the mask.

2001-06-04  Peter Neelin  <neelin@bic.mni.mcgill.ca>

	* print_all_label_bounding_boxes: Fixed test for y_max that was
	testing against the xw coordinate, rather than yw.
	
	
2001-05-11  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Update: Add files in ~david/Source/Batch_processing that did not
	have an associated RCS file.  Add subdirectories Conglomerate and
	Csh.  The files "test.obj" and "tt.obj" were converted to ascii
	format.  Other obvious junk was removed, mostly files full of
	curvature numbers, and the like.  This is tagged with
	David-2001-05-11.

	* Update: Updated all the current files from the checked-out
	versions in ~david/Source/Batch_processing.  This is tagged with