@@ -1,3 +1,10 @@
+2001-11-07  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
+
+	* make_gradient_volume.c (main): Correct parameter ordering
+	for create_gradient_volume() call.
+	(create_gradient_volume): Output magnitude rather than squared
+	magnitude.  Set the real_range on output volume correctly.
+
 2001-10-28  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
 	* mincresample.c:
